docs: .env.example 최신화 (임계치 30/10, 안 쓰는 변수 제거)

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,15 @@
 SLACK_BOT_TOKEN=xoxb-xxxx
 SLACK_SIGNING_SECRET=xxxx
 SLACK_APP_TOKEN=xapp-xxxx
-SLACK_ALERT_CHANNEL=C0XXXXXXX
+SLACK_ALERT_CHANNEL=C04ACB66X7C
 
-# Retool
+# Retool - 대상 추출
 RETOOL_WORKFLOW_URL=https://api.retool.com/v1/workflows/xxx/startTrigger
 RETOOL_API_KEY=xxxx
+
+# Retool - 자동 감지 체크
+RETOOL_CHECK_WORKFLOW_URL=https://api.retool.com/v1/workflows/yyy/startTrigger
+RETOOL_CHECK_API_KEY=xxxx
 
 # Solapi
 SOLAPI_API_KEY=xxxx
@@ -14,7 +18,8 @@ SOLAPI_API_SECRET=xxxx
 SOLAPI_SENDER=02-xxxx-xxxx
 
 # 모니터링 설정
-ALERT_THRESHOLD=20
-RECOVERY_RATE=90
-CHECK_INTERVAL_MIN=5
-COOLDOWN_MIN=30
+ALERT_THRESHOLD=30
+RECOVERY_THRESHOLD=10
+
+# 테스트 모드 (설정 시 해당 번호로만 발송, 삭제 시 실발송)
+# TEST_PHONE=010xxxx1234
